--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <header>
         <div class="container">
             <div class="hero">
-                <h1>👋 Hi, I'm Guillermo Ferreira, thanks for dropping in</h1>
+                <h1>👋 Hi, I'm Guillermo, thanks for dropping in</h1>
                 <p class="subtitle">Corporate Communications Strategist</p>
                 <p class="tagline">Transitioning into business growth roles, leveraging expertise in product marketing and stakeholder management across EMEA markets.</p>
             </div>
@@ -415,7 +415,7 @@
         <div class="container">
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#posts">Writing</a></li>
+                <li><a href="#posts">Recent Writings</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
