--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         :root {
             --primary-color: #111111;
             --secondary-color: #666666;
-            --accent-color: #0066cc;
+            --accent-color: #8b5cf6;
             --light-gray: #f8f9fa;
             --border-color: #e1e5e9;
             --white: #ffffff;
