--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         :root {
             --primary-color: #111111;
             --secondary-color: #666666;
-            --accent-color: #8b5cf6;
+            --accent-color: #0066cc;
             --light-gray: #f8f9fa;
             --border-color: #e1e5e9;
             --white: #ffffff;
@@ -404,7 +404,7 @@
         <div class="container">
             <div class="hero">
                 <h1>👋 Hi, I'm Guillermo, thanks for dropping in</h1>
-                <p class="subtitle">Corporate Communications Strategist</p>
+                <p class="subtitle">Business Communication Strategist</p>
                 <p class="tagline">Transitioning into business growth roles, leveraging expertise in product marketing and stakeholder management across EMEA markets.</p>
             </div>
         </div>
@@ -415,7 +415,7 @@
         <div class="container">
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#posts">Recent Writings</a></li>
+                <li><a href="#posts">Writings</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
