--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
                 <p>Developed a comprehensive business plan and landing page for an innovative caravan co-ownership startup. Created market analysis, financial projections, and go-to-market strategy for the shared mobility space in Spain.</p>
                 <div class="project-images">
                     <div class="project-image">Landing</div>
+                    <img src="images/kokara_1_landing.png" alt="Landing Page preview">
                     <div class="project-image">Business Plan</div>
                     <div class="project-image">App Mockup</div>
                 </div>
