--- a/index.html
+++ b/index.html
@@ -357,6 +357,43 @@
 
         .contact-link:hover {
             text-decoration: underline;
+             }
+                    /* CV Download Button */
+        .cv-download {
+            margin-top: 40px;
+            text-align: center;
+        }
+
+        .cv-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 12px 24px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            color: white;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: 500;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            border: 2px solid transparent;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .cv-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.3);
+            text-decoration: none;
+            color: white;
+        }
+
+        .cv-button:active {
+            transform: translateY(0);
+        }
+
+        .download-icon {
+            font-size: 0.9rem;
         }
 
         /* Footer */
@@ -389,11 +426,14 @@
                 padding: 60px 0;
             }
 
-
-
             .contact-links {
                 flex-direction: column;
                 gap: 16px;
+            }
+              /* AÑADE ESTA REGLA AQUÍ */
+            .cv-button {
+                padding: 14px 28px;
+                font-size: 1.1rem;
             }
         }
     </style>
@@ -585,6 +625,13 @@
                     <a href="https://www.linkedin.com/in/guillermo-ferreira/" target="_blank" class="contact-link">LinkedIn</a>
                     <a href="https://medium.com/@guilleferreira" target="_blank" class="contact-link">Medium</a>
                 </div>
+
+                <div class="cv-download">
+        <a href="./CV_GFVH_ENG_2025 (7).pdf" download class="cv-button">
+            <span class="download-icon">⬇</span>
+            Download CV
+        </a>
+    </div>
             </div>
         </div>
     </section>
@@ -640,7 +687,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Guillermo Ferreira",
-        "jobTitle": "Corporate Communications Strategist",
+        "jobTitle": "Business Communication Strategist",
         "description": "Corporate Communications professional transitioning into business development and go-to-market roles",
         "url": "https://guillermo-ferreira.github.io",
         "email": "gferreiravh@gmail.com",
@@ -652,7 +699,6 @@
             "Corporate Communications",
             "Business Development",
             "GTM Strategy",
-            "Stakeholder Management",
             "Sales Enablement",
             "Multi-market Coordination"
         ],
