--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guillermo Ferreira - Corporate Communications & Business Development</title>
+    <title>Guillermo Ferreira - Business Communication Strategist</title>
     <meta name="description" content="Corporate Communications Strategist transitioning to Business Development. Multi-market stakeholder management across EMEA.">
     <meta name="keywords" content="business development, corporate communications, GTM strategy, EMEA markets, sales enablement, stakeholder management">
     <meta name="author" content="Guillermo Ferreira">
