--- a/index.html
+++ b/index.html
@@ -235,18 +235,28 @@
             margin-bottom: 16px;
         }
 
-        .project-images {
-            display: flex;
-            gap: 16px;
-            margin: 16px 0;
-        }
-
         .project-image {
             flex: 1;
             height: 120px;
             background: var(--light-gray);
             border-radius: 8px;
             border: 1px solid var(--border-color);
+            overflow: hidden;
+            position: relative;
+        }
+
+        .project-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .project-image:hover img {
+            transform: scale(1.05);
+        }
+
+        .project-image .placeholder {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -254,7 +264,9 @@
             font-size: 0.9rem;
             text-align: center;
             font-weight: 500;
+            height: 100%;
         }
+
 
         .project-link {
             color: var(--accent-color);
@@ -522,9 +534,12 @@
                 <h3>Kokara: Caravan co-ownership platform</h3>
                 <p>Developed a comprehensive business plan and landing page for an innovative caravan co-ownership startup. Created market analysis, financial projections, and go-to-market strategy for the shared mobility space in Spain.</p>
                 <div class="project-images">
-                    <div class="project-image">Landing</div>
-                    <div class="project-image">Business Plan</div>
-                    <div class="project-image">App Mockup</div>
+                    <div class="project-image">
+                        <img src="./images/images-website (0).jpg" alt="Kokara Landing Page">
+                    <div class="project-image">
+                        <img src="./images/images-website (1).jpg" alt="Kokara Business Plan">
+                    <div class="project-image">
+                        <img src="./images/images-website (2).jpg" alt="Kokara Logo">
                 </div>
                 <a href="https://kokara-beta.webflow.io/" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -533,9 +548,12 @@
                 <h3>The Artist Side: Music discovery website based on artist recommendations</h3>
                 <p>Building a unique platform that reveals the music your favourite artists actually listen to. Combining music curation with artist insights to create a new discovery experience for music enthusiasts.</p>
                 <div class="project-images">
-                    <div class="project-image">UI Design</div>
-                    <div class="project-image">Concept</div>
-                    <div class="project-image">Wireframes</div>
+                    <div class="project-image">
+                        <img src="./images/images-website (3).jpg" alt="The Artist Side UI Design">
+                    <div class="project-image">
+                        <img src="./images/images-website (4).jpg" alt="The Artist Side Collaborate">
+                    <div class="project-image">
+                        <img src="./images/images-website (5).jpg" alt="The Artist Side Mockup">
                 </div>
                 <a href="https://guillermo-ferreira.github.io/the-artist-side/" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -544,9 +562,12 @@
                 <h3>Di Gata: Community building through drops</h3>
                 <p>Launch of the first drop from the Di Gata community: retro football shirts inspired by the village of Agua Amarga in Almería. The second batch has already sold out, with the third currently in preparation alongside the upcoming second drop.</p>
                 <div class="project-images">
-                    <div class="project-image">Branding</div>
-                    <div class="project-image">Landing</div>
-                    <div class="project-image">Marketing</div>
+                    <div class="project-image">
+                        <img src="./images/images-website (6).jpg" alt="Di Gata Landing">
+                    <div class="project-image">
+                        <img src="./images/images-website (7).jpg" alt="Di Gata Jersey">
+                    <div class="project-image">
+                        <img src="./images/images-website (8).jpg" alt="Di Gata Marketing">
                 </div>
                 <a href="https://tally.so/r/3l2o6W" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -555,9 +576,12 @@
                 <h3>Paradise Cup: Local football tournament</h3>
                 <p>Organising and branding a regional football tournament in Asturias with a contemporary format and modern digital presence. Managing everything from tournament structure to marketing and participant experience.</p>
                 <div class="project-images">
-                    <div class="project-image">Branding</div>
-                    <div class="project-image">Landing</div>
-                    <div class="project-image">Marketing</div>
+                    <div class="project-image">
+                        <img src="./images/images-website (9).jpg" alt="Paradise Cup Branding">
+                    <div class="project-image">
+                        <img src="./images/images-website (10).jpg" alt="Paradise Cup Landing">
+                    <div class="project-image">
+                        <img src="./images/images-website (11).jpg" alt="Paradise Cup Marketing">
                 </div>
                 <a href="#" class="project-link">Coming Soon →</a>
             </div>
@@ -566,9 +590,12 @@
                 <h3>Poetry Book</h3>
                 <p>This is my second poetry book, designed, written and self-published by me. A reflection of how I see the world.</p>
                 <div class="project-images">
-                    <div class="project-image">Cover Design</div>
-                    <div class="project-image">Layout</div>
-                    <div class="project-image">Mockup</div>
+                    <div class="project-image">
+                        <img src="./images/images-website (12).jpg" alt="Poetry Book Cover Design">
+                    <div class="project-image">
+                        <img src="./images/images-website (13).jpg" alt="Poetry Book Layout">
+                    <div class="project-image">
+                        <img src="./images/images-website (14).jpg" alt="Poetry Book Mockup">
                 </div>
                 <a href="#" class="project-link">Download book →</a>
             </div>
