--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
         .project-image:hover img {
             transform: scale(1.05);
         }
+        .project-images {
+            display: flex;
+            gap: 16px;
+            margin: 16px 0;
+        }
 
         .project-image .placeholder {
             display: flex;
@@ -536,10 +541,13 @@
                 <div class="project-images">
                     <div class="project-image">
                         <img src="./images/images-website (0).jpg" alt="Kokara Landing Page">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (1).jpg" alt="Kokara Business Plan">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (2).jpg" alt="Kokara Logo">
+                    </div>
                 </div>
                 <a href="https://kokara-beta.webflow.io/" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -550,10 +558,13 @@
                 <div class="project-images">
                     <div class="project-image">
                         <img src="./images/images-website (3).jpg" alt="The Artist Side UI Design">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (4).jpg" alt="The Artist Side Collaborate">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (5).jpg" alt="The Artist Side Mockup">
+                    </div>
                 </div>
                 <a href="https://guillermo-ferreira.github.io/the-artist-side/" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -564,10 +575,13 @@
                 <div class="project-images">
                     <div class="project-image">
                         <img src="./images/images-website (6).jpg" alt="Di Gata Landing">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (7).jpg" alt="Di Gata Jersey">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (8).jpg" alt="Di Gata Marketing">
+                    </div>
                 </div>
                 <a href="https://tally.so/r/3l2o6W" target="_blank" class="project-link">View Project →</a>
             </div>
@@ -578,10 +592,13 @@
                 <div class="project-images">
                     <div class="project-image">
                         <img src="./images/images-website (9).jpg" alt="Paradise Cup Branding">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (10).jpg" alt="Paradise Cup Landing">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (11).jpg" alt="Paradise Cup Marketing">
+                    </div>
                 </div>
                 <a href="#" class="project-link">Coming Soon →</a>
             </div>
@@ -592,10 +609,13 @@
                 <div class="project-images">
                     <div class="project-image">
                         <img src="./images/images-website (12).jpg" alt="Poetry Book Cover Design">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (13).jpg" alt="Poetry Book Layout">
+                    </div>
                     <div class="project-image">
                         <img src="./images/images-website (14).jpg" alt="Poetry Book Mockup">
+                    </div>
                 </div>
                 <a href="#" class="project-link">Download book →</a>
             </div>
