--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                         <img src="./images/images-website (14).jpg" alt="Poetry Book Mockup">
                     </div>
                 </div>
-                <a href="#" class="project-link">Download book →</a>
+                <a href="assets//assets/EL PROCESO DE APRENDER A BRINDAR - Guillermo F.V.H.pdf" class="project-link">Download book →</a>
             </div>
         </div>
     </section>
