--- a/index.html
+++ b/index.html
@@ -436,34 +436,97 @@
             font-size: 0.9rem;
         }
 
-        /* Responsive */
-        @media (max-width: 768px) {
-            .container {
-                padding: 0 20px;
-            }
+       /* Responsive */
+@media (max-width: 768px) {
+    .container {
+        padding: 0 24px;
+    }
 
-            .hero h1 {
-                font-size: 2rem;
-            }
+    header {
+        padding: 60px 0 60px;
+    }
 
-            nav ul {
-                gap: 24px;
-            }
+    .hero h1 {
+        font-size: 1.75rem;
+        padding: 20px 20px;
+        margin-bottom: 32px;
+        line-height: 1.3;
+    }
 
-            section {
-                padding: 60px 0;
-            }
+    .hero .subtitle {
+        font-size: 1.1rem;
+    }
 
-            .contact-links {
-                flex-direction: column;
-                gap: 16px;
-            }
-              /* AÑADE ESTA REGLA AQUÍ */
-            .cv-button {
-                padding: 14px 28px;
-                font-size: 1.1rem;
-            }
-        }
+    .hero .tagline {
+        font-size: 0.95rem;
+        line-height: 1.6;
+    }
+
+    nav ul {
+        gap: 20px;
+    }
+
+    nav a {
+        font-size: 0.9rem;
+    }
+
+    section {
+        padding: 60px 0;
+    }
+
+    .section-title {
+        font-size: 1.3rem;
+        margin-bottom: 32px;
+    }
+
+    .about-content p {
+        font-size: 1rem;
+    }
+
+    .post-item:hover {
+        margin: 0;
+        padding: 24px 0;
+        background-color: transparent;
+    }
+
+    .project-images {
+        flex-direction: column;
+    }
+
+    .project-image {
+        height: 180px;
+    }
+
+    .contact-links {
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .cv-button {
+        padding: 14px 28px;
+        font-size: 1.05rem;
+    }
+}
+
+/* Para móviles muy pequeños */
+@media (max-width: 480px) {
+    .container {
+        padding: 0 20px;
+    }
+
+    .hero h1 {
+        font-size: 1.5rem;
+        padding: 16px 16px;
+    }
+
+    nav ul {
+        gap: 16px;
+    }
+
+    nav a {
+        font-size: 0.85rem;
+    }
+}
     </style>
 </head>
 <body>
