--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                         <img src="./images/images-website (14).jpg" alt="Poetry Book Mockup">
                     </div>
                 </div>
-                <a href="assets/EL PROCESO DE APRENDER A BRINDAR - Guillermo F.V.H.pdf" class="project-link">Download book →</a>
+                <a href="assets/EL PROCESO DE APRENDER A BRINDAR - Guillermo F.V.H.pdf" class="project-link" target="_blank">Download book →</a>
             </div>
         </div>
     </section>
