--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://guillermo-ferreira.github.io/">
     <meta property="og:title" content="Guillermo Ferreira - Corporate Communications & Business Development">
-    <meta property="og:description" content="Corporate Communications Strategist transitioning to Business Development. Multi-market stakeholder management across EMEA.">
+    <meta property="og:description" content="Corporate Communications Strategist transitioning to Business Development.">
+    <meta property="og:image" content="https://guillermo-ferreira.github.io/images/open-graph-GF.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://guillermo-ferreira.github.io/images/open-graph-GF.jpg">
     
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
