--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
         <div class="container">
             <h2 class="section-title">Contact</h2>
             <div class="contact-content">
-                <p>Ready to discuss how my communications and business development experience can contribute to your team's growth.</p>
+                <p>Contact me for anything you or your team need, or to chat about GTM and startups</p>
                 
                 <div class="contact-links">
                     <a href="mailto:gferreiravh@gmail.com" class="contact-link">Email</a>
@@ -769,7 +769,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>© 2025 Guillermo Ferreira. Built with care.</p>
+            <p>© 2026 Guillermo Ferreira. Built with care.</p>
         </div>
     </footer>
 
