--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
                 </div>
 
                 <div class="cv-download">
-        <a href="./CV_GFVH_ENG_2025 (7).pdf" download class="cv-button">
+        <a href="./CV_GF_2026.pdf" download class="cv-button">
             <span class="download-icon">⬇</span>
             Download CV
         </a>
